# pyskybitz

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
scripts/: dtd2xsd.pl
src/services/: api.py  parser.py
tests/: sample_data_loader.py  test_hello_world.py
tests/data/: query-positions-response.xml
tests/services/: test_api.py  test_parser.py
