[tool.poetry]
name = "pyskybitz"
version = "0.1.0"
description = "Python client to work with SkyBitz API"
authors = ["Jasurbek Nurboyev <jasurbeknurboyev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
Inject = "^4.3.1"

[tool.poetry.dev-dependencies]
ruff = "^0.0.189"
pytest = "^7.2.0"
pre-commit = "^2.20.0"
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ['E501', 'W605', 'E501', 'F821', 'C901', 'D104', 'D203', 'D212', 'D301']
line-length = 120
select = [
    'B002',
    'B003',
    'B004',
    'B005',
    'B006',
    'B007',
    'B009',
    'B010',
    'B011',
    'B012',
    'B013',
    'B014',
    'C',
    'E',
    'F',
    'I',
    'W',
    'D',
]
